src/test/ui/span/regions-close-over-borrowed-ref-in-obj.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/regions-close-over-borrowed-ref-in-obj.rs:22:27
   |
LL |         let ss: &isize = &id(1);
   |                           ^^^^^ temporary value does not live long enough
...
LL |     }
   |     - temporary value dropped here while still borrowed
LL | }
   | - temporary value needs to live until here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
